--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,12 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
+  "name": "Task Planner App",
+    "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
+      "src": "images/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    }, 
   ],
   "start_url": "./index.html",
   "display": "standalone",
