--- a/package.json
+++ b/package.json
@@ -34,5 +34,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/conejihan/Task-API.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/conejihan/Task-API/issues"
+  },
+  "homepage": "https://github.com/conejihan/Task-API#readme",
+  "description": ""
 }
